# Call_Analysis_SpeechRec_LLM

./: .gitignore  JustFile  README.md  config.toml  llm_functions.toml  mkdocs.yml  pyproject.toml  words_config.yaml
Application/Backend/: __init__.py  fast_api_server.py  pyannote_utils.py  speech_to_text.py
Application/Frontend/: __init__.py  app.py
Application/Frontend/functionality/: __init__.py  config_validators.py  text2json.py  validators_detectors.py
Application/Frontend/pages/: __init__.py  analytics.py
Application/Frontend/plot_functionality/: __init__.py  plot_functions.py
Application/sample_inputs/: transcript.txt
Application/unified_logging/: config_types.py  configs.toml  logging_server.py
docs/: architecture.md  experience.md  functionality.md  index.md
transcripts/call_20250328_101520/: diary.txt
transcripts/call_20250407_080347/: call_summary.toml
transcripts/call_20250407_080945/: call_summary.toml
transcripts/call_20250407_082706/: call_summary.toml
transcripts/call_20250407_112213/: call_summary.toml
transcripts/call_20250407_145628/: call_summary.toml  diary.txt
transcripts/call_20250521_142503/: call_summary.toml
transcripts/call_20250522_090813/: call_summary.toml
